# DOMIAS

./: .gitignore  .isort.cfg  LICENSE  README.md  baselines.py  baselines_stable.py  celeba_eval.py  celeba_gen.py  domias_celebA_main.py  domias_gaussian_prior.py  domias_main.py  gen_synth_data.py  main.py  run_tabular.sh  setup.cfg  setup.py  train_synth.py
.github/workflows/: test.yml
bnaf/: __init__.py  bnaf_den_est.py  density_estimation.py  train_real_bnaf.py
bnaf/datasets/: __init__.py  maggic.py
bnaf/metrics/: combined.py  compute_identifiability.py  feature_distribution.py  improved_precision_recall.py  parzen.py  prdc.py
bnaf/optim/: adam.py  adamax.py  lr_scheduler.py
experiments/: celeba_eval.py  celeba_gen.py  domias_main.py  run_tabular.sh
metrics/: compute_wd.py  evaluation.py  evaluation_old.py  fid.py  prd_score.py  precision_recall.py
src/domias/: baselines.py  evaluator.py  version.py
src/domias/bnaf/: README.md  __init__.py  bnaf.py  density_estimation.py
src/domias/bnaf/optim/: __init__.py  adam.py  adamax.py  lr_scheduler.py
src/domias/metrics/: evaluation.py  wd.py
src/domias/models/: ctgan.py  generator.py
tests/: conftest.py  test_domias.py
tutorials/: experiment_1_housing.ipynb
